# transcription-assistant

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  transcription-assistant-spec.md  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml  security.yml
src/: index.html  main.ts  style.css  test.html
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  commands.rs  ffmpeg.rs  main.rs  merger.rs
src/styles/: main.css
